Fix lazyloader scrollbar jittering on Firefox

--- a/src/styles/main.less
+++ b/src/styles/main.less
@@ -824,3 +824,9 @@ button.btn-circle {
     }
   }
 }
+
+.lazy-loader-container {
+  height: 80px; /* same as .loader-pokeball */
+  display: inline-block;
+  overflow: hidden;
+}
